full site. Master Page.

--- a/home.html
+++ b/home.html
@@ -6,15 +6,7 @@
 </head>
 <body>
     <header>
-        <h5>STUDENT&reg LTD.</h5>
-        <div>
-            <ul>
-                <li><a href="./home.html">HOME</a></li>
-                <li><a href="#">ABOUT US</a></li>
-                <li><a href="#">GALLERY</a></li>
-                <li><a href="#">CONTACT</a></li>
-            </ul>
-        </div>
+        <script src="./MasterPage/header.js"></script>
     </header>
     <main>
         <form>
@@ -39,39 +31,7 @@
         </form>
     </main>
     <footer>
-        <div>
-            <h4>ABOUT ME</h4>
-            <p>
-Cascading Style Sheets (CSS) is used to format<br>
-the layout of a webpage.<br><br>
-With CSS, you can control the color, font, <br>
-the size of text, the spacing between elements, <br>
-how elements are positioned and laid out, <br>
-what background images or background colors <br>
-are to be used, different displays for different<br>
-devices and screen sizes, and much more!<br>
-            </p>
-        </div>
-        <div>
-            <h4>MY PROGECTS</h4>
-            <section>
-                <img src="./Images/Small/1.jpg">
-                <img src="./Images/Small/2.jpg">
-                <img src="./Images/Small/3.jpg">
-                <img src="./Images/Small/4.jpg">
-                <img src="./Images/Small/5.jpg">
-                <img src="./Images/Small/6.jpg">                
-            </section>
-        </div>
-        <div>
-            <h4>NEWSLETTER REGISTRATION</h4>
-            <p>
-Subscribe today to receive all the latest Day news via<br>
-email. You may unsubscribe from this service at any <br>
-time.               
-            </p>
-            <summary>
-                <button>ENTER EMAIL</button>
-                <button>SUSCRIBE</button>
-            </summary>
+        <script src="./MasterPage/footer.js"></script>
+    </footer> 
+</body>          
 </html>
